--- a/packages/console/src/scss/_underscore.scss
+++ b/packages/console/src/scss/_underscore.scss
@@ -86,3 +86,13 @@
     transform: translateX(100%);
   }
 }
+
+@mixin multi-line-ellipsis($line) {
+  // https://css-tricks.com/almanac/properties/l/line-clamp/
+  /* stylelint-disable-next-line value-no-vendor-prefix */
+  display: -webkit-box;
+  -webkit-line-clamp: $line;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
